--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "farmOS-map": "github:farmOS/farmOS-map#v1.3.0",
-    "farmos": "^0.1.7",
+    "farmos": "^2.0.0-alpha.1",
     "ramda": "^0.27.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
